--- a/app/html/index.html
+++ b/app/html/index.html
@@ -1,7 +1,10 @@
 @include('components/_head.html')
 
+<div class="wrapper">
+
+@include('components/_header.html')
+
 <main class="main">
-  @include('components/_header.html')
 
   @include('components/_hero.html')
 
@@ -18,5 +21,7 @@
 </main>
 
 @include('components/_footer.html')
+
+</div>
 
 @include('components/_footer-scripts.html')
