--- a/app/html/index.html
+++ b/app/html/index.html
@@ -14,7 +14,7 @@
 
   @include('components/_restaurant.html')
 
-  @include('components/_testimonials.html')
+  @include('components/_reviews.html')
 
   @include('components/_app.html')
 
