--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,6 @@
 
 <header class="header">
   <div class="container">
-      
       <nav class="header__nav">
         <a class="logo header__logo" href="#">
           <img class="logo__img" src="../../images/logo.svg" alt="site logo" width="200" height="39">
@@ -322,7 +321,7 @@
     <h2 class="title restaurant__title">
       Найкращі ресторани
     </h2>
-    <div class="restaurant__slider">
+    <d class="restaurant__slider">
       <ul class="restaurant__list swiper-wrapper cols">
         <li class="restaurant__item swiper-slide">
           <article class="content-card">
@@ -453,7 +452,7 @@
       </ul>
 
       <div class="restaurant__dots"></div>
-    </div>
+    </d iv>
   </div>
 </section>
 
@@ -696,6 +695,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 <script src="../../js/mixitup.min.js"></script>
+<script src="../../../node_modules/jquery-form-styler/dist/jquery.formstyler.min.js"></script>
 <script src="../../js/main.min.js"></script>
 </body>
 
